--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,10 +2,10 @@ global:
   scrape_interval: 15s # How frequently to scrape targets by default
   evaluation_interval: 15s # How frequently to evaluate rules
 scrape_configs:
-  - job_name: "supabase_backend"
+  - job_name: 'supabase_backend'
     static_configs:
-      - targets: ["host.docker.internal:3000"] # For Docker on Mac/Windows, host.docker.internal resolves to the host machine
+      - targets: ['host.docker.internal:3000'] # For Docker on Mac/Windows, host.docker.internal resolves to the host machine
 
-  - job_name: "prometheus"
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ['localhost:9090']
